src/objects/FieloAlpha__RedemptionItem__c.object
<CustomObject>
    <description>Items in a redemption order or in an open shopping cart.</description>
    <fields>
        <fullName>FieloPLT__CodeRange__c</fullName>
        <label>Range of Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DeliveredDate__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationDate__c</fullName>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ItemPoints__c</fullName>
        <description>Points involved on the item.</description>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MemberName__c</fullName>
        <description>Formula to get the member name.</description>
        <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.FieloPLT__LastName__c +&quot;, &quot;+ FieloPLT__Redemption__r.FieloPLT__Member__r.FieloPLT__FirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NetPoints__c</fullName>
        <formula>FieloPLT__RewardItem__r.FieloPLT__Reward__r.FieloPLT__PointsCant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetPoints</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OriginalPoints__c</fullName>
        <label>Original Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Redemption__c</fullName>
        <label>Redemption</label>
        <referenceTo>FieloPLT__Redemption__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>Redemption_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardItemPrice__c</fullName>
        <description>Price of the item.</description>
        <label>Reward Item Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardItem__c</fullName>
        <label>Reward Item</label>
        <referenceTo>FieloPLT__RewardItem__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>Redemption_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardName__c</fullName>
        <description>Name of the reward.</description>
        <formula>FieloPLT__RewardItem__r.FieloPLT__Reward__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reward Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>RedemptionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>Item status.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__StockMode__c</fullName>
        <formula>TEXT(FieloPLT__Reward__r.FieloPLT__VoucherCreationMode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UniqueCode__c</fullName>
        <formula>IF( ISPICKVAL(FieloPLT__Reward__r.FieloPLT__VoucherCreationMode__c, &apos;Controlled By Item&apos;), FieloPLT__Code__c,
   IF ( FieloPLT__CodeRange__c &lt; 10 ,
      FieloPLT__Code__c + &apos;0&apos; + TEXT( FieloPLT__CodeRange__c ),
      FieloPLT__Code__c + RIGHT( TEXT( FieloPLT__CodeRange__c ), 2 )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__VoucherLink__c</fullName>
        <description>Formula to link the voucher.</description>
        <formula>IF(
   ISPICKVAL(  FieloPLT__Status__c ,&apos;Ready&apos; ) ,
   HYPERLINK( &apos;./apex/&apos; +  IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;) + &apos;RedemptionItemVoucher?voucherId=&apos; +  Id, $Label.FieloPLT__Voucher ),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__isInstantRedemption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instant Redemption</label>
        <type>Checkbox</type>
    </fields>
    <label>Redemption Item</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloPLT__QuantityGreaterThanZero</fullName>
        <active>true</active>
        <description>The quantity must be greater than zero</description>
        <errorConditionFormula>FieloPLT__Quantity__c &lt;= 0</errorConditionFormula>
        <errorMessage>The quantity must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>